src/test/ui/error-codes/E0195.stderr
error[E0195]: lifetime parameters or bounds on method `bar` do not match the trait declaration
  --> $DIR/E0195.rs:19:5
   |
12 |     fn bar<'a,'b:'a>(x: &'a str, y: &'b str);
   |     ----------------------------------------- lifetimes in impl do not match this method in trait
...
19 |     fn bar<'a,'b>(x: &'a str, y: &'b str) { //~ ERROR E0195
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetimes do not match method in trait

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0195"
